// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/IconButton IconButton Playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #4945EE;
  background-color: transparent;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: solid 1px rgba(73,69,238,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.875rem;
}

.emotion-2:hover {
  background-color: rgba(73,69,238,0.1);
}

.emotion-2:active {
  background-color: rgba(73,69,238,0.2);
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #4945EE;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #4945EE;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #4945EE;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-2:hover {
  background-color: #1b16ea;
}

.emotion-2:active {
  background-color: #1511bc;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #fff;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #fff;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #4945EE;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.875rem;
}

.emotion-5:hover {
  background-color: #1b16ea;
}

.emotion-5:active {
  background-color: #1511bc;
}

.emotion-8 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #4945EE;
  padding: 0;
  height: 3.5rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.5rem;
}

.emotion-8:hover {
  background-color: #1b16ea;
}

.emotion-8:active {
  background-color: #1511bc;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #fff;
  background-color: #4945EE;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-2:hover {
  background-color: #1b16ea;
}

.emotion-2:active {
  background-color: #1511bc;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #fff;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #fff;
}

.emotion-5 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #000;
  background-color: #36C152;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-5:hover {
  background-color: #2b9941;
}

.emotion-5:active {
  background-color: #207130;
}

.emotion-7 {
  fill: #000;
  width: 1rem;
  height: 1rem;
}

.emotion-7 path {
  fill: #000;
}

.emotion-8 {
  font-size: 0.875rem;
  font-weight: 500;
  color: #000;
  background-color: #FF1744;
  padding: 0;
  height: 2.25rem;
  opacity: 1;
  border-radius: 100%;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2.25rem;
}

.emotion-8:hover {
  background-color: #e3002c;
}

.emotion-8:active {
  background-color: #b00022;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-7"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-7"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
